--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <input type="number" id="orderInput" min="1" value="2">
             <button id="initializeButton">Initialize Empty Tree</button>
             <button id="initializeSampleButton">Initialize with Sample Data</button>
+            <input type="number" id="randomCountInput" placeholder="Number of keys">
+            <button id="initializeRandomButton">Initialize with Random Data</button>
         </div>
         <div class="insert-controls">
             <input type="number" id="insertInput" placeholder="Enter a number">
