--- a/index.html
+++ b/index.html
@@ -8,34 +8,65 @@
 <body>
     <div class="controls">
         <h2>B-Tree Visualization</h2>
-        <div class="setup-controls">
-            <label for="orderInput">Max Keys per Node:</label>
-            <input type="number" id="orderInput" min="1" value="2">
-            <button id="initializeButton">Initialize Empty Tree</button>
-            <button id="initializeSampleButton">Initialize with Sample Data</button>
-            <input type="number" id="randomCountInput" placeholder="Number of keys">
-            <button id="initializeRandomButton">Initialize with Random Data</button>
+        
+        <!-- Initialization Controls -->
+        <div class="control-section">
+            <h3>Initialize Tree</h3>
+            <div class="setup-controls">
+                <div class="input-group">
+                    <label for="orderInput">Max Keys per Node:</label>
+                    <input type="number" id="orderInput" min="1" value="2">
+                </div>
+                <div class="button-group">
+                    <button id="initializeButton">Empty Tree</button>
+                    <button id="initializeSampleButton">Sample Data</button>
+                </div>
+                <div class="input-group">
+                    <label for="randomCountInput">Number of Random Keys:</label>
+                    <input type="number" id="randomCountInput" placeholder="Enter count">
+                    <button id="initializeRandomButton">Random Data</button>
+                </div>
+            </div>
         </div>
-        <div class="insert-controls">
-            <input type="number" id="insertInput" placeholder="Enter a number">
-            <button id="insertButton">Insert</button>
+
+        <!-- Operations Controls -->
+        <div class="control-section">
+            <h3>Tree Operations</h3>
+            <div class="operations-controls">
+                <div class="input-group">
+                    <label for="insertInput">Insert:</label>
+                    <input type="number" id="insertInput" placeholder="Enter value">
+                    <button id="insertButton">Insert</button>
+                </div>
+
+                <div class="input-group">
+                    <label for="deleteInput">Delete:</label>
+                    <input type="number" id="deleteInput" placeholder="Enter value">
+                    <button id="deleteButton">Delete</button>
+                </div>
+
+                <div class="input-group">
+                    <label for="searchInput">Search:</label>
+                    <input type="number" id="searchInput" placeholder="Enter value">
+                    <button id="searchButton">Search</button>
+                </div>
+
+                <div class="input-group update-group">
+                    <label>Update:</label>
+                    <div class="update-inputs">
+                        <input type="number" id="updateOldInput" placeholder="Old value">
+                        <span>→</span>
+                        <input type="number" id="updateNewInput" placeholder="New value">
+                        <button id="updateButton">Update</button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="input-group">
-            <input type="number" id="deleteInput" placeholder="Value to delete">
-            <button id="deleteButton">Delete</button>
-        </div>
-        <div class="control-group">
-            <label for="updateOldInput">Old Value:</label>
-            <input type="number" id="updateOldInput" placeholder="Enter old value">
-            <label for="updateNewInput">New Value:</label>
-            <input type="number" id="updateNewInput" placeholder="Enter new value">
-            <button id="updateButton">Update</button>
-        </div>
+
         <div id="errorMessage" class="error-message"></div>
     </div>
     <div id="stepDescription" class="step-description"></div>
     <div id="bTreeContainer"></div>
-    <div id="operationLog"></div>
     <script src="btree.js"></script>
 </body>
 </html>
