--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h3>Initialize Tree</h3>
             <div class="setup-controls">
                 <div class="input-group">
-                    <label for="orderInput">Max Keys per Node:</label>
+                    <label for="orderInput">Order:</label>
                     <input type="number" id="orderInput" min="1" value="2">
                 </div>
                 <div class="button-group">
